--- a/estilo.css
+++ b/estilo.css
@@ -228,6 +228,7 @@ h1, h2 {
     width: 100%;
 }
 /* SECCION S K I L L S */
+
 .skills{
     background-color: #000000;
     color: #fff;
@@ -521,7 +522,7 @@ h1, h2 {
     width: 100%;
     height: 100%;
     text-align: center;
-    background: linear-gradient(rgba(28, 182, 151, 0.04), rgba(28, 182, 151, 0.193));
+    background: linear-gradient(rgba(0, 96, 181, 0.432), rgba(68, 68, 68, 0.548));
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -529,13 +530,6 @@ h1, h2 {
     font-size: 18px;
     letter-spacing: 3px;
     opacity: 0;
-}
-.proyecto img {
-  transition: transform 0.5s ease;
-}
-
-.proyecto:hover img {
-  transform: scale(1.2);
 }
 
 .portfolio .galeria .proyecto .overlay h3{
@@ -550,15 +544,28 @@ h1, h2 {
 }
 /* SECCION CONTACTO */
 .contacto{
-    background-image: url(img/contact_bg.png);
-    background-color: #000000;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.558), rgba(0, 0, 0, 0.47)),
+    url(img/Conta.gif);
     color: #fff;
     padding: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .contacto .contenido-seccion{
     max-width: 1100px;
     margin: auto;
+    text-align: center;
+
 }
+
+.centrado {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
 .contacto h2{
     font-size: 48px;
     font-family: 'Righteous';
@@ -569,7 +576,7 @@ h1, h2 {
     display: flex;
 }
 .contacto .col{
-    width: 50%;
+    width: 100%;
     padding: 10px;
     position: relative;
 }
@@ -579,7 +586,7 @@ h1, h2 {
     padding: 18px;
     border: none;
     margin-bottom: 20px;
-    background-color: #000000;
+    background-color: #000000a4;
     color: #fff;
     font-size: 18px;
 }
@@ -617,7 +624,7 @@ h1, h2 {
     top: 40%;
     background-color: #000000;
     padding: 20px;
-    max-swidth: 350px;
+    max-width: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -632,6 +639,8 @@ h1, h2 {
     display: inline-block;
     margin-right: 20px;
 }
+
+
 footer{
     background-color: #000000;
     color: #fff;
@@ -660,7 +669,7 @@ footer .arriba{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: #1CB698;
+    background-color: #007b94;
     color: #fff;
     position: absolute;
     left: 50%;
