--- a/estilo.css
+++ b/estilo.css
@@ -542,6 +542,224 @@ h1, h2 {
 .portfolio .galeria .proyecto .overlay:hover h3{
     margin-bottom: 0px;
 }
+
+.calculadora {
+    background-color: #007b94;
+    color: white;
+    max-width: 100%;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: .5rem;
+    width: 300px; /* ajusta el ancho a tu gusto */
+    margin:  0 auto; /* establece los márgenes */
+}
+
+.pantalla {
+    grid-column: 1 / -1;
+    background-color: #092831;
+    padding: 1.5rem;
+    font-size: 2rem;
+    text-align: right;
+    border-radius: .5rem;
+    margin-bottom: 1rem;
+    font-family: monospace;
+    font-weight: 600;
+}
+
+.btn {
+    background-color: #15173c;;
+    color: white;
+    border: 0;
+    padding: 1.5rem .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .5rem;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #09312c;
+}
+
+#cero {
+    grid-column: span 2;
+}
+
+#igual {
+    grid-row: span 2;
+    background-color: #e6394a;
+}
+
+#igual:hover {
+    background-color: #e65766;
+}
+
+#texto {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    width: 90%;
+}
+
+.animated-button {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #fff;
+    background-color: #007b94;
+    border: none;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .animated-button:before {
+    content: '';
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: rotate(45deg);
+    transition: all 0.4s cubic-bezier(0.85, 0, 0.15, 1);
+  }
+  
+  .animated-button:hover:before {
+    top: 0;
+    left: 0;
+  }
+  
+  .animated-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.15);
+  }
+  
+  .animated-button:active {
+    transform: translateY(0);
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .btn-rounded {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
+  .fa {
+    font-size: 14px;
+  }
+  
+  .flipx {
+    transform: scaleX(-1);
+  }
+  
+  #score {
+    margin-top: 5px;
+  }
+  
+  #outer-board {
+    width: 365px;
+    margin: auto;
+  }
+  
+  #board {
+    float: left;
+    position: relative;
+    background-color: #000000;
+    width: 280px;
+    height: 448px;
+    margin: 10px auto;
+    border: 2px solid #009b8e;
+  }
+  
+  #stats {
+    float: right;
+    position: relative;
+    background-color: #000000;
+    width: 70px;
+    height: 448px;
+    margin: 10px auto;
+    border: 2px solid #009b8e;
+  }
+  
+  #banner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 100px;
+    background-color: black;
+    color: #009b8e;
+    z-index: 2;
+    text-align: center;
+  }
+  
+  #message {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 23px;
+    margin: 10px;
+    margin-top: 20px;
+  }
+  
+  #new-game {
+    font-weight: 100;
+    cursor: pointer;
+  }
+  
+  .block,
+  .empty {
+    position: absolute;
+    background-color: #009b8e;
+    width: 28px;
+    height: 28px;
+  }
+  
+  .empty {
+    opacity: 0.2;
+  }
+  
+  .inner-tile {
+    position: absolute;
+    background-color: #000000;
+    border: 4px solid #00ffc3;
+    width: 14px;
+    height: 14px;
+    margin: 3px;
+  }
+  
+  .inner-inner-tile {
+    position: absolute;
+    background-color: black;
+    width: 8px;
+    height: 8px;
+    margin: 3px;
+  }
+
+  #Tex {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    width: 90%;
+}
+
 /* SECCION CONTACTO */
 .contacto{
     background: linear-gradient(to top, rgba(0, 0, 0, 0.558), rgba(0, 0, 0, 0.47)),
