--- a/estilo.css
+++ b/estilo.css
@@ -9,31 +9,61 @@ html{
     /* me permite deslizar cuando hago clic en los links del menu */
     scroll-behavior: smooth;
 }
-/* MENU */
-.contenedor-header{
-    background: #000000c9;
+.spot-publicitario {
+    background-color: #000000f1; /* Color de fondo del spot publicitario */
+    padding: 1px ; /* Ajusta el padding según sea necesario */
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 100; /* Asegura que esté por encima del contenedor-header */
+    overflow: hidden; /* Para ocultar el texto que se desborda */
+    color: #ffffff; 
+    font-size: 18px; /* Tamaño del texto un poco más grande */
+    font-family: 'Righteous';
 }
-.contenedor-header header{
-    max-width: 1100px;
-    margin: right;
+
+.spot-publicitario p {
+    animation: animacionTexto 35s linear infinite; /* Animación del texto */
+    white-space: nowrap; /* Evita que el texto se divida en líneas */
+}
+
+@keyframes animacionTexto {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+.contenedor-header {
+    background: #000000c9;
+    position: fixed;
+    width: 100%;
+    top: 23px; /* Ajusta esta distancia según el tamaño del spot-publicitario */
+    left: 0;
+    z-index: 99;
+    transition: top 0.3s; /* Agrega una transición suave */
+}
+
+.contenedor-header header {
+    max-width: 800px;
+    margin: 0 auto; /* Centra el header horizontalmente */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 3px 20px;
+    padding: 0px 10px; /* Ajusta el padding según sea necesario */
+    position: relative; /* Asegura que los elementos dentro del header respeten el z-index */
 }
+
 .contenedor-header header .logo a{
-    font-size: 36px;
+    font-size: 40px;
     color: #007b94;
     text-decoration: none;
 }
 
 .logo img {
-    width: 45px;
+    width: 35px;
     height: auto;
 }
 
@@ -61,6 +91,8 @@ html{
     cursor: pointer;
     display: none;
 }
+
+
 /* SECCION I N I C I O */
 .inicio{
     background: linear-gradient(to top, rgba(30, 35, 38, 0), rgba(30, 35, 38, 0)),
@@ -78,12 +110,13 @@ html{
     margin: auto;
     text-align: center;
     border-radius: 40px;
+    margin-top: 87px;
 }
 .inicio .contenido-banner img{
-    margin-top: 40px;
+    margin-top: 90px;
     border: 5px solid #ffffffb5;
     display: block;
-    width: 80%;
+    width: 70%;
     margin: auto;
     border-radius: 100%;
 }
